# workoutGenerator

./: Procfile  README.md  exercise_ideas.txt  exercises.py  fly.toml  muscles.py  requirements.txt  setup.cfg  workouts.py
examples/: arms_1.py  ex_1.py  ex_2.py  full_body_1.py  full_body_2.py  full_body_3.py  pyramid.py  random_workout.py  weighty_wednesday.py
wobot/: __init__.py  displays.py  exercise_data.tsv  exercises.py  muscles.py  workouts.py
wobot/static/css/: app-bab664bd2a.css
wobot/static/js/: blocks.js  generators.js  timer-cc5b3881ae.js
wobot/templates/: base.html  generate.html  index.html  index_backup.html  workout.html
