[metadata]
# replace with your username:
name = wobot
version = 0.0.1
author = James Kent
author_email = jamesdkent21@gmail.com
description = Automatic workout generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdkent/workoutGenerator
project_urls =
    Bug Tracker = https://github.com/jdkent/workoutGenerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy >= 1.20.0
    simpleaudio >= 1.0.0
    pandas >= 1.0.0
    flask >= 1.1.2
    gunicorn >=20.1.0